--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Cydonia - Nuestros Viajes/title>
+  <title>Cydonia - Nuestros Viajes</title>
   <meta name="description" content="Acompañamos a negocios a impulsar sus marcas hasta el espacio, ¡Conocelos!" >
   <meta name="keywords" content="Innovacion, transformacion digital, marketing digital">
 
@@ -75,6 +75,63 @@
   
   </ol>
 </main>
+
+<section >
+
+  <div class="Servicios" class="container">
+    <div class="row">
+
+      <div class="Titulo">
+        <h2>Nuestros servicios</h2>
+      </div>
+
+    <div class="col-3">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Desarrollo-Web.png" class="card-img-top" alt="Nativo_Cosmetics">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Nativo Cosmetic</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Marketing-Digital.png" class="card-img-top" alt="Marketing_digital">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Marketing Digital</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Inteligencia-Comercial.png" class="card-img-top" alt="Inteligencia_comercial">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Inteligencia Comercial</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Consultorias.png" class="card-img-top" alt="Consultorias">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Consultorias</h5>
+          <p class="Card_Description" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
+          <a href="#" class="btn btn-primary">Ver más</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+</section>
 
 <!-- ======= Footer ======= -->
 
