--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -74,8 +74,8 @@
       </div>
 
     <div class="col-3">
-      <div class="Card" style="width: 18rem;">
-        <img class= "Card__Img" src="assets/img/Desarrollo-Web.png" class="card-img-top" alt="Desarrollo_web">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Desarrollo-Web.png" class="card-img-top" alt="Desarrollo_web">
         <div class="card-body">
           <h5 class="Card_Tittle" class="card-title">Desarrollo Web</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
@@ -85,8 +85,8 @@
     </div>
 
     <div class="col-3">
-      <div class="Card" style="width: 18rem;">
-        <img class= "Card__Img" src="assets/img/Marketing-Digital.png" class="card-img-top" alt="Marketing_digital">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Marketing-Digital.png" class="card-img-top" alt="Marketing_digital">
         <div class="card-body">
           <h5 class="Card_Tittle" class="card-title">Marketing Digital</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
@@ -96,8 +96,8 @@
     </div>
 
     <div class="col-3">
-      <div class="Card" style="width: 18rem;">
-        <img class= "Card__Img" src="assets/img/Inteligencia-Comercial.png" class="card-img-top" alt="Inteligencia_comercial">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Inteligencia-Comercial.png" class="card-img-top" alt="Inteligencia_comercial">
         <div class="card-body">
           <h5 class="Card_Tittle" class="card-title">Inteligencia Comercial</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
@@ -107,8 +107,8 @@
     </div>
 
     <div class="col-3">
-      <div class="Card" style="width: 18rem;">
-        <img class= "Card__Img" src="assets/img/Consultorias.png" class="card-img-top" alt="Consultorias">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Consultorias.png" class="card-img-top" alt="Consultorias">
         <div class="card-body">
           <h5 class="Card_Tittle" class="card-title">Consultorias</h5>
           <p class="Card_Description" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
