--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -62,9 +62,9 @@
 </header>
 <!-- ======= End Header ======= -->
 
-<main>
+<!-- <main>
   <h1>Conoce nuestros proyectos</h1>
-  <!-- Lista de Proyectos -->
+
   <ol>
     <li><a href="https://nativocosmetic.com/">Nativo Cosmetic</a></li>
     <li><a href="https://madisoncoffee.cl/">Madison Coffee</a></li>
@@ -74,7 +74,7 @@
     <li><a href="https://colibricoffeeroasters.cl/">Colibri Coffee Roasters</a></li>
   
   </ol>
-</main>
+</main> -->
 
 <section >
 
@@ -82,49 +82,65 @@
     <div class="row">
 
       <div class="Titulo">
-        <h2>Nuestros servicios</h2>
+        <h2>Nuestros Proyectos</h2>
       </div>
 
     <div class="col-3">
       <div class="Card">
-        <img class= "Card__Img" src="../assets/img/Desarrollo-Web.png" class="card-img-top" alt="Nativo_Cosmetics">
+        <img class= "Card__Img" src="../assets/img/Nativo_Cosmetics.png" class="card-img-top" alt="Nativo_Cosmetics">
         <div class="card-body">
           <h5 class="Card_Tittle" class="card-title">Nativo Cosmetic</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-          <a href="#" class="btn btn-primary">Ver más</a>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
     </div>
 
     <div class="col-3">
       <div class="Card">
-        <img class= "Card__Img" src="../assets/img/Marketing-Digital.png" class="card-img-top" alt="Marketing_digital">
+        <img class= "Card__Img" src="../assets/img/Madison_Coffee.png" class="card-img-top" alt="Madison_Coffee">
         <div class="card-body">
-          <h5 class="Card_Tittle" class="card-title">Marketing Digital</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-          <a href="#" class="btn btn-primary">Ver más</a>
+          <h5 class="Card_Tittle" class="card-title">Madison Coffee</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
     </div>
 
     <div class="col-3">
       <div class="Card">
-        <img class= "Card__Img" src="../assets/img/Inteligencia-Comercial.png" class="card-img-top" alt="Inteligencia_comercial">
+        <img class= "Card__Img" src="../assets/img/Coffee_Culture.png" class="card-img-top" alt="Coffee_Culture">
         <div class="card-body">
-          <h5 class="Card_Tittle" class="card-title">Inteligencia Comercial</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-          <a href="#" class="btn btn-primary">Ver más</a>
+          <h5 class="Card_Tittle" class="card-title">Coffee Culture</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
     </div>
 
     <div class="col-3">
       <div class="Card">
-        <img class= "Card__Img" src="../assets/img/Consultorias.png" class="card-img-top" alt="Consultorias">
+        <img class= "Card__Img" src="../assets/img/Klan_Market.png" class="card-img-top" alt="Klan_Market">
         <div class="card-body">
-          <h5 class="Card_Tittle" class="card-title">Consultorias</h5>
-          <p class="Card_Description" class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, nemo quos illum enim labore iusto molestias deleniti animi odit et nulla quam voluptas ea rerum nam quasi quidem voluptate consectetur.</p>
-          <a href="#" class="btn btn-primary">Ver más</a>
+          <h5 class="Card_Tittle" class="card-title">Klan Market</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </div>
+    
+    <div class="col-3">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Bronstatt.png" class="card-img-top" alt="Bronstatt">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Bronstatt</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="Card">
+        <img class= "Card__Img" src="../assets/img/Colibri_Coffee.png" class="card-img-top" alt="Colibro_Coffee">
+        <div class="card-body">
+          <h5 class="Card_Tittle" class="card-title">Colibri Coffee Roasters</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
     </div>
